<resources>
    <string name="app_name">EMS App</string>
    <string name="not_a_user">Not a user?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_medicine">Medicine</string>
    <string name="menu_consultation">Consultation</string>
    <string name="menu_schedule">Schedule</string>
    <string name="update_profile">Update Profile</string>
    <string name="consult">Consult</string>
    <string name="requested_on">Requested On</string>
    <string name="schedule">Schedule</string>
    <string name="morning_dose">Morning Dose</string>
    <string name="afternoon_dose">Afternoon Dose</string>
    <string name="evening_dose">Evening Dose</string>
    <string name="days_of_intake">No of days for intake</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="add_medicine_alert">Add Medicine Alert</string>
    <string name="gender">Gender</string>
    <string name="dob">DoB</string>
    <string name="update">Update</string>
    <string name="title_choose_profile_pic">Choose your profile picture</string>
    <string name="add_trusted_contacts">Trusted Contacts</string>
    <string name="medical_records">Medical Records</string>
    <string name="select_files">Select Files</string>
    <string name="document_name">Document Name</string>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>
</resources>