<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/update_profile" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_medicine"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_medicine" />
        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_consultation" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_schedule" />
    </group>
</menu>